K8s/Lab/K8s Ingress/Example/deploypython.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pyapp-deployment
spec:
  selector:
    matchLabels:
      app: pyapp
  replicas: 2
  template:
    metadata:
      labels:
        app: pyapp
    spec:
      imagePullSecrets:
        - name: registry-pnh-secret
      containers:
        - name: pyapp
          image: registry.gitlab.com/tgpham26/pnhappproject:latest
          ports:
          - containerPort: 3000
