K8s/Lab/K8s Ingress/Example/servicepnh.yaml
apiVersion: v1
kind: Service
metadata:
  name: trourest186
spec:
  type: NodePort
  selector:
    app: pyapp
  ports:
  - port: 80
    targetPort: 3000
    name: name-of-service-port
    protocol: TCP
