K8s/Lab/K8s Ingress/Example/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-ingress
  namespace: pyapp-ns-pnh
spec:
  ingressClassName: nginx
  rules:
    - host: www.trourest186.online
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: trourest186
                port:
                  number: 3000
            path: /
  # This section is only required if TLS is to be enabled for the Ingress
  tls:
    - hosts:
      - www.trourest186.online
      secretName: phpsecret
